kubernetes/ocp-mgmt/applications/monitoring/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: alloy
spec:
  type: ClusterIP
  selector:
    app: alloy
  ports:
    - name: http
      port: 12345
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
spec:
  type: ClusterIP
  selector:
    app: blackbox-exporter
  ports:
    - name: http
      port: 9115
      targetPort: http
