kubernetes/ocp-mgmt/applications/monitoring/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
spec:
  host: grafana.apps.ocp-mgmt.rh-lab.morey.tech
  to:
    kind: Service
    name: grafana
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
